--- a/src/main/resources/static/css/estilosAltaTitular.css
+++ b/src/main/resources/static/css/estilosAltaTitular.css
@@ -9,20 +9,21 @@
     --green: #05f515;
     --font: 'Nunito Sans', sans-serif;
     }
-    
-    body{
+
+body{
     width: 95%;
+    height: 100%;
     position: relative;
     font-family: var(--font);
     /*background-color: #007bff;*/
     display: inline;
     justify-content: center;
     background-image:url(../img/fondo_vehiculos.jpg);
-    background-size: cover;
+    backdrop-filter: blur(5px);
+    background-size: 100% 100%;
     background-repeat:no-repeat;
     background-position: center center;
-    }
-    
+}
     .container{
     width: 60%;
     height: auto;
