--- a/src/main/resources/static/css/estilosBuscarTitular.css
+++ b/src/main/resources/static/css/estilosBuscarTitular.css
@@ -8,15 +8,21 @@
     --red: #f02121;
     --font: 'Nunito Sans', sans-serif;
     }
-  
-  body{
-    width: 95%;
-    position: relative;
-    font-family: var(--font);
-    background-color: #007bff;
-    display: inline;
-    justify-content: center;
-  }
+
+body{
+  width: 95%;
+  height: 100%;
+  position: relative;
+  font-family: var(--font);
+  /*background-color: #007bff;*/
+  display: inline;
+  justify-content: center;
+  background-image:url(../img/fondo_vehiculos.jpg);
+  backdrop-filter: blur(10px);
+  background-size: 100% 100%;
+  background-repeat:no-repeat;
+  background-position: center center;
+}
   
   .container{
     width: 60%;
