ModificarTitular and footers

--- a/src/main/resources/static/css/estilosEmitirLicencia.css
+++ b/src/main/resources/static/css/estilosEmitirLicencia.css
@@ -17,9 +17,8 @@ body{
   /*background-color: #007bff;*/
   display: inline;
   justify-content: center;
-  background-image:url(../img/fondo_vehiculos.jpg);
-  backdrop-filter: blur(10px);
-  background-size: 100% 100%;
+  background-image:url(../img/fondo.png);
+  background-size: cover;
   background-repeat:no-repeat;
   background-position: center center;
 }
@@ -183,4 +182,9 @@ transition: 0.5s;
 
 .form-check-label{
   font-weight: 300;
+}
+
+
+footer{
+  background-color: #f8f9fa;
 }
