--- a/src/main/resources/static/css/estilosModificarUsuario.css
+++ b/src/main/resources/static/css/estilosModificarUsuario.css
@@ -18,14 +18,14 @@ body{
     /*background-color: #007bff;*/
     display: inline;
     justify-content: center;
-    background-image:url(../img/fondo_vehiculos.jpg);
-    backdrop-filter: blur(10px);
-    background-size: 100% 100%;
+    background-image:url(../img/fondo.png);
+    background-size: cover;
     background-repeat:no-repeat;
     background-position: center center;
 }
-    
+
     .container{
+
     width: 60%;
     height: auto;
     margin: auto;
@@ -180,6 +180,9 @@ body{
     .message_active {
         display: block;
     }
-    
-      
+
+
+    footer{
+        background-color: #f8f9fa;
+    }
       
