--- a/src/main/resources/static/css/estilosAltaTitular.css
+++ b/src/main/resources/static/css/estilosAltaTitular.css
@@ -18,9 +18,8 @@ body{
     /*background-color: #007bff;*/
     display: inline;
     justify-content: center;
-    background-image:url(../img/fondo_vehiculos.jpg);
-    backdrop-filter: blur(5px);
-    background-size: 100% 100%;
+    background-image:url(../img/fondo.png);
+    background-size: cover;
     background-repeat:no-repeat;
     background-position: center center;
 }
@@ -192,6 +191,9 @@ body{
     .message_active {
         display: block;
     }
-    
-      
+
+
+    footer{
+        background-color: #f8f9fa;
+    }
       
