--- a/src/main/resources/static/css/estilosAltaUsuario.css
+++ b/src/main/resources/static/css/estilosAltaUsuario.css
@@ -12,18 +12,17 @@
 
 
 body{
-width: 95%;
-height: 100%;
-position: relative;
-font-family: var(--font);
-/*background-color: #007bff;*/
-display: inline;
-justify-content: center;
-background-image:url(../img/fondo_vehiculos.jpg);
-backdrop-filter: blur(5px);
-background-size: 100% 100%;
-background-repeat:no-repeat;
-background-position: center center;
+    width: 95%;
+    height: 100%;
+    position: relative;
+    font-family: var(--font);
+    /*background-color: #007bff;*/
+    display: inline;
+    justify-content: center;
+    background-image:url(../img/fondo.png);
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-position: center center;
 }
 
 
@@ -183,5 +182,8 @@ color: var(--red);
     display: block;
 }
 
-  
+
+footer{
+    background-color: #f8f9fa;
+}
   
