--- a/src/main/resources/static/css/estilosEmitirLicencia.css
+++ b/src/main/resources/static/css/estilosEmitirLicencia.css
@@ -174,7 +174,7 @@ transition: 0.5s;
 
 /*Type license*/
 .type_license{
-  width: auto;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
