--- a/src/main/resources/static/css/estilosEmitirLicencia.css
+++ b/src/main/resources/static/css/estilosEmitirLicencia.css
@@ -146,6 +146,14 @@ transition: 0.5s;
   display: block;
 }
 
+.show_results{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  /* display: none; */
+}
+
 .container_radio_buttons{
   height: auto;
   border-radius: 5px;
