--- a/src/main/resources/static/css/estilosPantallaPrincipal.css
+++ b/src/main/resources/static/css/estilosPantallaPrincipal.css
@@ -14,14 +14,13 @@
 
 body{
     width: 95%;
-    min-height:2000px;
+    min-height:100%;
     position: relative;
     font-family: var(--font);
     display: inline;
     justify-content: center;
-    background-image:url(../img/fondo_vehiculos.jpg);
-    backdrop-filter: blur(5px);
-    background-size: 100% 100%;
+    background-image:url(../img/fondo.png);
+    background-size: cover;
     background-repeat:no-repeat;
     background-position: center center;
 }
@@ -88,4 +87,7 @@ body{
   object-fit: contain;
   padding: 10px;
   background-color: var(--lightblue);
+}
+footer{
+  background-color: #f8f9fa;
 }
