--- a/src/main/resources/static/css/estilosListadoLicenciaVigente.css
+++ b/src/main/resources/static/css/estilosListadoLicenciaVigente.css
@@ -48,6 +48,87 @@ body{
   padding: 20px;
 
 }
+
+.container_fields{
+width: 60%;
+/* background-color: palevioletred; */
+display: grid;
+grid-gap: 10px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 20px;
+padding-bottom: 20px;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+justify-items:center; /*acomodar elementos de forma horizontal*/
+align-items: center; /*acomodar elementos de forma verticalmente*/
+}
+
+.container_fields .fields{
+/* background-color: lightgreen; */
+padding: 10px;
+/* border: 1px solid rgb(6, 6, 6); */
+/*No se utiliza width y height en los contenedores*/
+display: grid;
+justify-self: stretch; /*Abarca el ancho de la celda sin salirse de ella*/
+align-self:stretch; /*Abarca el alto de la celda sin salirse de ella*/
+align-content:start;
+}
+
+.fields .field_label{
+height: auto;
+text-align: left;
+/* background-color: violet; */
+font-weight: 600;
+color: var(--dark);
+}
+
+.fields .field_input{
+width: auto;
+padding: .4em 1.4em .3em .8em;
+border-radius: 5px;
+border: 2px solid var(--gray);
+-webkit-transition: 0.5s;
+transition: 0.5s;
+}
+.fields .field_input:focus{
+border: 2px solid var(--blue);
+outline: none;
+}
+
+.fields .group_blood{
+padding: .4em 1.4em .3em .8em;
+border-radius: 5px;
+border: 2px solid var(--gray);
+-webkit-transition: 0.5s;
+transition: 0.5s;
+}
+.fields .group_blood:focus{
+border: 2px solid var(--blue);
+outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.container_fields .button{
+grid-column: 1 / 3;
+}
+
+.button{
+width: 150px;
+background: var(--blue);
+color: var(--white);
+padding: 1%;
+border: none;
+border-radius: 5px;
+text-transform: uppercase;
+}
+
+/*Estilos para los resultados*/
 .container_filter{
   width: 60%;
   display: grid;
@@ -59,6 +140,7 @@ body{
   grid-template-columns: repeat(3, 1fr);
   justify-items:center; /*acomodar elementos de forma horizontal*/
   align-items: center; /*acomodar elementos de forma verticalmente*/
+  display:none;
 }
 .container_filters .fields{
   padding: 10px;
@@ -86,14 +168,33 @@ transition: 0.5s;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-
-  /* display: none; */
+  display:none;
 }
 .table_column th{
     text-align:center;
     vertical-align: middle;
    /* border: 2px solid var(--red);
     background-color:var(--blue);*/
+}
+
+.container_filter_active{
+    display:grid;
+}
+.showResults_active {
+   display: block;
+}
+
+/*Validations styles*/
+.error_message {
+margin-top: 5px;
+margin-bottom: 0;
+display: none;
+font-size: 0.8rem;
+}
+
+.error_message i{
+margin-top: 5px;
+color: var(--red);
 }
 
 footer{
