--- a/src/main/resources/static/css/estilosListadoLicenciaExpirada.css
+++ b/src/main/resources/static/css/estilosListadoLicenciaExpirada.css
@@ -25,13 +25,12 @@ body{
 .container{
   width: fit-content;
   height: auto;
-  margin: auto;
   background-color: var(--light);
   border-radius: 10px;
   box-shadow: 0 0 25px 0 rgba(0 0 0 / 0.9);
   margin-top: 50px;
   margin-bottom: 50px;
-  padding-bottom: 30px;
+  padding: 40px;
 }
 
 .container h2{
@@ -45,28 +44,22 @@ body{
   text-align: center;
   font-weight: 300;
   font-size: 0.9rem;
-  padding: 20px;
-
 }
 
 .container_fields{
 width: 60%;
 /* background-color: palevioletred; */
-display: grid;
-grid-gap: 10px;
+
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 20px;
 padding-bottom: 20px;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(2, 1fr);
 justify-items:center; /*acomodar elementos de forma horizontal*/
 align-items: center; /*acomodar elementos de forma verticalmente*/
 }
 
 .container_fields .fields{
 /* background-color: lightgreen; */
-padding: 10px;
 /* border: 1px solid rgb(6, 6, 6); */
 /*No se utiliza width y height en los contenedores*/
 display: grid;
@@ -84,25 +77,12 @@ color: var(--dark);
 
 .fields .field_input{
 width: auto;
-padding: .4em 1.4em .3em .8em;
 border-radius: 5px;
 border: 2px solid var(--gray);
 -webkit-transition: 0.5s;
 transition: 0.5s;
 }
 .fields .field_input:focus{
-border: 2px solid var(--blue);
-outline: none;
-}
-
-.fields .group_blood{
-padding: .4em 1.4em .3em .8em;
-border-radius: 5px;
-border: 2px solid var(--gray);
--webkit-transition: 0.5s;
-transition: 0.5s;
-}
-.fields .group_blood:focus{
 border: 2px solid var(--blue);
 outline: none;
 }
@@ -130,19 +110,10 @@ text-transform: uppercase;
 /*Estilos para los resultados*/
 .container_filter{
   width: 100%;
-  display: grid;
-  grid-gap: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items:center; /*acomodar elementos de forma horizontal*/
-  align-items: center; /*acomodar elementos de forma verticalmente*/
-  display:none;
+  display: flex;
+  justify-content: space-between;
 }
 .container_filters .fields{
-  padding: 10px;
   display: grid;
   justify-self: stretch; /*Abarca el ancho de la celda sin salirse de ella*/
   align-self:stretch; /*Abarca el alto de la celda sin salirse de ella*/
@@ -182,7 +153,7 @@ transition: 0.5s;
 .error_message {
 margin-top: 5px;
 margin-bottom: 0;
-display: none;
+
 font-size: 0.8rem;
 }
 
